--- a/FinalSource.ipynb
+++ b/FinalSource.ipynb
@@ -5,7 +5,7 @@
    "id": "984afafc-06cb-4980-ab49-5f97ae582013",
    "metadata": {},
    "source": [
-    "# **FINAL PROJECT - PROGRAMING FOR DATA SCIENCE** \n",
+    "# **FINAL PROJECT - PROGRAMMING FOR DATA SCIENCE** \n",
     "\n",
     "### COLLABORATOR\n",
     "|<center><div style=\"width:150px\">ID</div><center>|<center><div style=\"width:290px\">Name</div><center>|\n",
