how did author collect data

--- a/FinalSource.ipynb
+++ b/FinalSource.ipynb
@@ -98,6 +98,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "025022a4-095e-4dce-9cf9-a0af18b1d8f4",
+   "metadata": {},
+   "source": [
+    "### How did author collect this dataset?\n",
+    "- The authors collected this from news in journal, in TV, in social media and from links below:\n",
+    "  - https://statistics.btselem.org/en/intro\n",
+    "  - https://statistics.btselem.org/en/intro/demolitions\n",
+    "  - https://statistics.btselem.org/en/intro/fatalities\n",
+    "  - https://www.btselem.org/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab31fe09-680e-4bc4-b626-96ae9d2ef7b1",
    "metadata": {},
    "source": [
