--- a/FinalSource.ipynb
+++ b/FinalSource.ipynb
@@ -93,7 +93,8 @@
     "- This dataset is about fatalities in the Israeli-Palestinian conflict from 2000 to 2023.\n",
     "- Author : Willian Oliveira Gibin and Asaniczka.\n",
     "- Usability : 10000\n",
-    "- License: CC0: Public Domain"
+    "- License: CC0: Public Domain\n",
+    "- Link: https://www.kaggle.com/datasets/willianoliveiragibin/fatalities-in-the-israeli-palestinian?resource=download"
    ]
   },
   {
